package com.devsblog1.model;

import lombok.Data;

@Data
public class PostResponse {
    String response;
}
