package com.devsblog1.repositories;

import com.devsblog1.model.Post_Likes;
import org.springframework.data.jpa.repository.JpaRepository;

public interface Post_LikesRepository extends JpaRepository<Post_Likes, Long> {
}
